# image-enhancement-deglaring

./: .env  .gitignore  README.md  best_model.onnx  docker-compose.yml  evaluate.py  main.py  optimized_train.py  pyproject.toml  requirements.txt  sweep.py  test_reproducibility.py  train.py
api/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  requirements.txt  test_api.py
frontend/: Dockerfile  README.md  app.py  requirements.txt
k8s/: README.md  api-deployment.yaml  api-service.yaml  deploy.sh  frontend-deployment.yaml  frontend-service.yaml  model-configmap.yaml  namespace.yaml
scripts/: check_png.py  check_png_dimensions.py  export_to_onnx.py  extract_weights.py  split_image.py
src/: dataset.py  model.py  optimized_dataset.py  optimized_model.py  preprocess.py  utils.py
